# compute-starter-kit-rust-static-content

./: .gitignore  .starter-kit-id  Cargo.toml  LICENSE  README.md  SECURITY.md  catalog-info.yaml  fastly.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
src/: awsv4.rs  config.rs  main.rs
