[package]
name = "fastly-compute-project"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
cfg-if = "1.0.0"
fastly = "0.9.4"
hex = { version = "0.4.3", optional = true }
hmac-sha256 = { version = "1.1.6", optional = true }
regex = "1.7.3"
time = { version = "0.3.20", features = ["formatting"] }
urlencoding = { version = "2.1.2", optional = true }

[features]
default = ["auth"]
auth = ["hmac-sha256", "hex", "urlencoding"]
