[package]
name = "fastly-compute-project"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
cfg-if = "1.0.0"
fastly = "0.10.0"
hex = { version = "0.4.3", optional = true }
hmac-sha256 = { version = "1.1.7", optional = true }
regex = "1.10.2"
time = { version = "0.3.23", features = ["formatting"] }
urlencoding = { version = "2.1.3", optional = true }

[features]
default = ["auth"]
auth = ["hmac-sha256", "hex", "urlencoding"]
